[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes_and_scripts/ListView/Entry/Entry.gd" type="Script" id=1]

[node name="Entry" type="HBoxContainer"]
margin_right = 430.0
margin_bottom = 52.0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_right = 20.0
margin_bottom = 20.0
size_flags_vertical = 0
disabled = true
text = "X"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 24.0
margin_right = 430.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 197.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="NameLineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
margin_right = 197.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Name"
caret_blink = true

[node name="PathLineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 197.0
margin_bottom = 52.0
editable = false
placeholder_text = "path/to/file"
caret_blink = true

[node name="NotesTextEdit" type="TextEdit" parent="HSplitContainer"]
margin_left = 209.0
margin_right = 406.0
margin_bottom = 52.0
mouse_filter = 1
size_flags_horizontal = 3
readonly = true
wrap_enabled = true
